--- a/.dockers/ubuntu-20.04/Dockerfile
+++ b/.dockers/ubuntu-20.04/Dockerfile
@@ -2,10 +2,10 @@ FROM ubuntu:20.04
 
 ENV DEVEL_HPP_DIR=/workspace UBUNTU=focal ROS=noetic
 
-RUN apt-get update -y && apt-get install -y \
-   curl \
-   gnupg2 \
-   && rm -rf /var/lib/apt/lists/*
+RUN --mount=type=cache,sharing=locked,target=/var/cache/apt --mount=type=cache,sharing=locked,target=/var/lib/apt \
+    apt-get update -qqy && DEBIAN_FRONTEND=noninteractive apt-get install -qqy \
+    curl \
+    gnupg2
 
 ADD repos.key /
 RUN echo "deb http://packages.ros.org/ros/ubuntu ${UBUNTU} main" > /etc/apt/sources.list.d/ros-latest.list \
@@ -15,8 +15,8 @@ RUN echo "deb http://packages.ros.org/ros/ubuntu ${UBUNTU} main" > /etc/apt/sour
  >> /etc/apt/sources.list.d/robotpkg.list \
  && apt-key add /repos.key
 
-RUN apt-get update -qqy \
- && DEBIAN_FRONTEND=noninteractive apt-get install -qqy \
+RUN --mount=type=cache,sharing=locked,target=/var/cache/apt --mount=type=cache,sharing=locked,target=/var/lib/apt \
+    apt-get update -qqy && DEBIAN_FRONTEND=noninteractive apt-get install -qqy \
     cmake \
     doxygen \
     g++ \
@@ -52,6 +52,7 @@ RUN apt-get update -qqy \
     robotpkg-openscenegraph \
     robotpkg-qpoases+doc \
     robotpkg-romeo-description \
+    robotpkg-py38-eigenpy \
     robotpkg-py38-omniorbpy \
     robotpkg-py38-pythonqt \
     robotpkg-qt5-osgqt \
@@ -62,7 +63,6 @@ RUN apt-get update -qqy \
     sudo \
     wget \
  && apt-get remove -y texlive-latex-base texlive-binaries ghostscript \
- && apt-get autoremove -y \
- && rm -rf /var/lib/apt/lists/*
+ && apt-get autoremove -y
 
 COPY auto-install-hpp.sh /
