--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ ADD_HPP_PKG(pinocchio)
 ADD_HPP_PKG(hpp-pinocchio)
 ADD_HPP_PKG(hpp-core)
 ADD_HPP_PKG(hpp-corbaserver)
+ADD_HPP_PKG(hpp-constraints)
 ADD_HPP_PKG(hpp-manipulation)
 ADD_HPP_PKG(hpp-manipulation-urdf)
 ADD_HPP_PKG(hpp-manipulation-corba)
