dockers: python3-lxml is required
```
[  1%] Generate with documentation for pyhpp/pinocchio/urdf/bindings.cc
Traceback (most recent call last):
  File "../../doc/configure.py", line 76, in <module>
    from doxygen_xml_parser import Index
  File "/workspace/src/hpp-python/doc/doxygen_xml_parser.py", line 2, in <module>
    from lxml import etree
ModuleNotFoundError: No module named 'lxml'

--- a/.dockers/ubuntu-20.04/Dockerfile
+++ b/.dockers/ubuntu-20.04/Dockerfile
@@ -42,9 +42,10 @@ RUN --mount=type=cache,sharing=locked,target=/var/cache/apt --mount=type=cache,s
     oxygen-icon-theme \
     psmisc \
     pyqt5-dev \
-    python-is-python3 \
+    python3-lxml \
     python3-pyqt5 \
     python3-matplotlib \
+    python-is-python3 \
     qtdeclarative5-dev \
     qtbase5-private-dev \
     qtmultimedia5-dev \
