--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ variables:
       - $DEVEL_HPP_DIR/test.sh hpp-manipulation            || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-manipulation-urdf       || status=1
       - $DEVEL_HPP_DIR/test.sh hpp-manipulation-corba      || status=1
-      - $DEVEL_HPP_DIR/test.sh hpp-rbprm                   || status=1
+      #- $DEVEL_HPP_DIR/test.sh hpp-rbprm                   || status=1
       #- $DEVEL_HPP_DIR/test.sh hpp-rbprm-corba             || status=1
       - set -e
       - exit $status
