ci: main is now 22.04. Also add 24.04

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,35 +69,57 @@ variables:
       paths:
         - workspace
 
+stable-24.04-build:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:24.04
+    allow_failure: true
+    only:
+      - stable
+    <<: *build_definition
+
 stable-22.04-build:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:22.04
-    allow_failure: true
     only:
       - stable
     <<: *build_definition
 
 stable-20.04-build:
+    allow_failure: true
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:20.04
     only:
       - stable
     <<: *build_definition
 
+devel-24.04-build:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:24.04
+    allow_failure: true
+    only:
+      -  devel
+    <<: *build_definition
+
 devel-22.04-build:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:22.04
-    allow_failure: true
     only:
       -  devel
     <<: *build_definition
 
 devel-20.04-build:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:20.04
+    allow_failure: true
     only:
       -  devel
     <<: *build_definition
 
+stable-24.04-test:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:24.04
+    allow_failure: true
+    dependencies:
+      - stable-24.04-build
+    only:
+      - stable
+    <<: *test_definition
+
 stable-22.04-test:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:22.04
-    allow_failure: true
     dependencies:
       - stable-22.04-build
     only:
@@ -106,16 +128,24 @@ stable-22.04-test:
 
 stable-20.04-test:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:20.04
+    allow_failure: true
     dependencies:
       - stable-20.04-build
     only:
       - stable
     <<: *test_definition
 
+devel-24.04-test:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:24.04
+    allow_failure: true
+    dependencies:
+      - devel-24.04-build
+    only:
+      -  devel
+    <<: *test_definition
 
 devel-22.04-test:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:22.04
-    allow_failure: true
     dependencies:
       - devel-22.04-build
     only:
@@ -124,15 +154,24 @@ devel-22.04-test:
 
 devel-20.04-test:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:20.04
+    allow_failure: true
     dependencies:
       - devel-20.04-build
     only:
       -  devel
     <<: *test_definition
 
+stable-24.04-doc:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:24.04
+    allow_failure: true
+    dependencies:
+      - stable-24.04-build
+    only:
+      - stable
+    <<: *doc_definition
+
 stable-22.04-doc:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:22.04
-    allow_failure: true
     dependencies:
       - stable-22.04-build
     only:
@@ -141,15 +180,24 @@ stable-22.04-doc:
 
 stable-20.04-doc:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:20.04
+    allow_failure: true
     dependencies:
       - stable-20.04-build
     only:
       - stable
     <<: *doc_definition
 
+devel-24.04-doc:
+    image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:24.04
+    allow_failure: true
+    dependencies:
+      - devel-24.04-build
+    only:
+      -  devel
+    <<: *doc_definition
+
 devel-22.04-doc:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:22.04
-    allow_failure: true
     dependencies:
       - devel-22.04-build
     only:
@@ -158,6 +206,7 @@ devel-22.04-doc:
 
 devel-20.04-doc:
     image: gitlab.laas.fr:4567/humanoid-path-planner/hpp-doc:20.04
+    allow_failure: true
     dependencies:
       - devel-20.04-build
     only:
